# fyitest1

./: CMakeLists.txt  MenuBar1.qml  Playback.qml  Playback2.qml  README.md  main.cpp  main.qml  main.qml.autosave  qml.qrc
